--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Tic Tac Toe</h1>
+    </header>
+    <main>
+        <div>
+            <div data-index="0" class="box"></div>
+            <div data-index="1" class="box"></div>
+            <div data-index="2" class="box"></div>
+        </div>
+        <div>
+            <div data-index="3" class="box"></div>
+            <div data-index="4" class="box"></div>
+            <div data-index="5" class="box"></div>
+        </div>
+        <div>
+            <div data-index="6" class="box"></div>
+            <div data-index="7" class="box"></div>
+            <div data-index="8" class="box"></div>
+        </div>
+    </main>
+    <div class="end">
+        <div class="turn"></div>
+        <button class="restart">Restart</button>
+    </div>
+        
+    <script src="./script.js"></script>
 </body>
 </html>
